[package]
name = "game_project"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]
members = [
    "crates/sdl3"
]

[workspace.dependencies]
sdl3 = {  path = "crates/sdl3", version = "0.1.0" }
sdl3-sys = { version = "0.5.2" }

[dependencies]
sdl3-main = { version = "0.5.4" }
sdl3-sys.workspace = true 
sdl3.workspace = true
